app/assets/stylesheets/business.css
/* ... */
.index-category-show {
  margin-top: 10px;
  margin-left: 10px;

}

.test-search-right {
  /* margin-left: 10px;
  display: flex; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}

.search-left {
  margin-bottom: 50px;
  margin-left: 1%;
}

.left-sided {
  padding-bottom: 50px;
}

.listing-show-img {
  /* width: 210px;
  height: 210px; */
  object-fit: cover;
}

.listing-show-img1 {
  width: 210px;
  height: 210px;
  object-fit: cover;
}

.test-search-name {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  border-radius: 3px;
  font-weight: bold;
  font-size: 18px;
}

/* .test-search-addy {
  font-size: 1px;

} */

/* .search-right {
  display: flex;
  padding-top: 20px;
  position: sticky;
  top: 18px;
  display: flex;
  position: sticky;
  flex-direction: column;
} */

